k8s/mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.30.0 (9d8dcb518)
  creationTimestamp: null
  labels:
    io.kompose.service: mongodb
  name: vendemais-mongodb-1
  namespace: vendemais
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mongodb
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.30.0 (9d8dcb518)
      creationTimestamp: null
      labels:
        io.kompose.network/vendemais-vendemais: "true"
        io.kompose.service: mongodb
    spec:
      containers:
        - image: mongodb/mongodb-community-server:6.0-ubi8
          name: mongodb
          ports:
            - containerPort: 27017
              hostPort: 27017
              protocol: TCP
          resources: {}
          volumeMounts:
            - mountPath: /data/db
              name: mongo-volumes
      restartPolicy: Always
      volumes:
        - name: mongo-volumes
          persistentVolumeClaim:
            claimName: mongo-volumes
status: {}
