k8s/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.30.0 (9d8dcb518)
  creationTimestamp: null
  labels:
    io.kompose.service: web
  name: web
  namespace: vendemais
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: web
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.30.0 (9d8dcb518)
      creationTimestamp: null
      labels:
        io.kompose.network/vendemais-default: "true"
        io.kompose.service: web
    spec:
      containers:
        - image: matheustanaka/vendemais-web:5
          name: web
          ports:
            - containerPort: 80
              # hostPort: 5000
              protocol: TCP
          resources: {}
      restartPolicy: Always
status: {}
